--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ font-size:35;
   <label for="Dept">DEPARTMENT</label></div><div>
   <select class="input_text" value="" name="Dept" id="Dept" required>
    <option value="none" selected disabled hidden></option>
-   <option value="EEE">Electronics And Electrical Engineering</option>
+   <option value="ECE">Electronics And Communication Engineering</option>
    <option value="CSE-A">Computer Science Engineering - [A]</option> 
    <option value="IT-B">Information Technology - [B]</option>
    <option value="AIDS">Artifical Intelligence and Data Science</option> 
