--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
 function validateform(){
+  document.getElementById('S').disabled = true;
   var num=["0","1","2","3","4","5","6","7","8","9"];
   var cap = ["A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z",];
   var a = document.forms["myForm"]["Ph_no"].value;
