--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ font-size:35;
 <div style="margin-top: 10px;">
 <table>
 <tr>
-<th><img src="https://lh5.googleusercontent.com/p/AF1QipM5m9YO9aNL53xT3xjCw2xVq63SgVH2gWqI-X9Z=w900-h482-p-k-no" width="70" height="50"/></th>
+<th><img src="http://drive.google.com/uc?export=view&id=1LzKZFUMtSa6FVAUmpBqztESnRCnEh7o8" width="60" height="60"/></th>
 <th><h1  style="float:right;color:#ffffff;" >WORKSHOP</h1></th>
 </tr>
 </table>
@@ -174,7 +174,7 @@ font-size:35;
   <div class="form">
   <h2>REGISTER</h2>
 
-<form methed="post" name="myForm" action="https://script.google.com/macros/s/AKfycbxoSg0flpLbbbouf_rZaHkzoyj0PfqT4epoK875Doyc0ucZO9Bv7dvB5SXOaruFh18FoQ/exec" onsubmit="return validateform()">
+<form methed="post" name="myForm" action="https://script.google.com/macros/s/AKfycbyCMWjM4grVFhdRcdudkZ8oqqRzf5l0qdNthp4gIZk1yWbc-3iPpBATAJVGdR6ahHFYdw/exec" onsubmit="return validateform()">
 
   <div class="input_group">
   <label for="Name">NAME</label></div><div>
