--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@ f=1;}}}
 if(f!=1){
 alert("use numberical characters(Roll Number)");
 return false;}
-
-
 }
 </script>
 <style>
@@ -60,7 +58,7 @@ body{
     justify-content: center;
     align-items: center;
     letter-spacing: 1px;
-    background-color: #0c1022;
+    background-color: black;
 }
 .container{
     position: relative;
@@ -68,7 +66,7 @@ body{
     height: 830px;
     max-width: 380px;
     max-height: 830px;
-    background: #040717;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,7 +90,7 @@ body{
     width: 100%;
     height: 100%;
     content: '';
-    background-image: conic-gradient(transparent, transparent, transparent, #00ccff);
+    background-image: conic-gradient(transparent, transparent, transparent, black);
     animation: rotate_border 6s linear infinite;
     animation-delay: -3s;
 }
@@ -107,11 +105,13 @@ body{
 .form{
     position: absolute;
     content: '';
-    background-color: #0c1022;
+    background-color: #ffffff;
     inset: 5px;
     padding: 50px 40px;
     z-index: 10;
-    color: #00ccff;
+    color: black;
+    font-weight:bold;
+    font-size:20px;
 } 
 h2{
     font-size: 40px;
@@ -134,24 +134,22 @@ h2{
     border-bottom: 1px solid #00ccff;
     font-size: 20px;
     padding-left: 10px;
-    color: #ffffff;
+    color: black;
     margin: 10px;
-}
-option{
-background-color: #040717;
 }
 button{
 border: 3px outset #ffffff78;
 padding: 8px 25px;
 border-radius: 4px;
 font-size: 16px;
-background-color:cyan;
-box-shadow: 0 0 5px cyan,
-0 0 25px cyan;
+background-color:black;
+box-shadow: 0 0 5px black,
+0 0 25px black;
+color: #ffffff;
 }
 button:hover{
-box-shadow: 0 0 5px cyan,
-0 0 25px cyan,0 0 50px cyan;
+box-shadow: 0 0 5px black,
+0 0 25px black,0 0 50px black;
 }
 h1{
 font-size:35;
@@ -208,7 +206,7 @@ font-size:35;
   </div>
 
 
-  <i style="font-size:12px;color:white;"><input type="checkbox" id="check" onclick="enable()"> After submit you'll get an invitation.
+  <i style="font-size:12px;color:black;"><input type="checkbox" id="check" onclick="enable()"> After submit you'll get an invitation.
 (please download or Take screenshot).
 your serial number is mandatory.Note It!!! </i>
 
